# src/meson.build
# Build the semicolon-lapack library

# Precision-independent utilities
common_sources = files(
  'lapack_tuning.c',
)

# Precision-independent auxiliary routines
auxiliary_sources = files(
  'auxiliary/xerbla.c',
  'auxiliary/ieeeck.c',
  'auxiliary/ilaenv2stage.c',
  'auxiliary/iparam2stage.c',
)

# Double precision routines
d_sources = files(
  # Auxiliary
  'd/dlamch.c',
  'd/dlacn2.c',
  'd/dlacpy.c',
  'd/dlaic1.c',
  'd/dlag2s.c',
  'd/dlagtm.c',
  'd/dlange.c',
  'd/dlangb.c',
  'd/dlangt.c',
  'd/dlanhs.c',
  'd/dlansy.c',
  'd/dlansp.c',
  'd/dlantb.c',
  'd/dlantp.c',
  'd/dlantr.c',
  'd/dlapy2.c',
  'd/dlarmm.c',
  'd/dlaqgb.c',
  'd/dlaqge.c',
  'd/dlarf.c',
  'd/dlarf1f.c',
  'd/dlarf1l.c',
  'd/dlarfb.c',
  'd/dlarfg.c',
  'd/dlarfgp.c',
  'd/dlarft.c',
  'd/dlarfx.c',
  'd/dlargv.c',
  'd/dlarz.c',
  'd/dlarzb.c',
  'd/dlarzt.c',
  'd/dlartv.c',
  'd/dlascl.c',
  'd/dlaset.c',
  'd/dlassq.c',
  'd/dlatbs.c',
  'd/dlatdf.c',
  'd/dlatps.c',
  'd/dlatrs.c',
  'd/dlatrs3.c',
  'd/dlatrz.c',
  'd/drscl.c',
  # LU factorization family
  'd/dgesv.c',
  'd/dgetf2.c',
  'd/dgetrf.c',
  'd/dgetrf2.c',
  'd/dgetrs.c',
  'd/dgetri.c',
  'd/dgetc2.c',
  'd/dgesc2.c',
  'd/dgecon.c',
  'd/dgeequ.c',
  'd/dgeequb.c',
  'd/dgerfs.c',
  'd/dgesvx.c',
  'd/dlaswp.c',
  'd/dlapmt.c',
  'd/dtrti2.c',
  'd/dtrtri.c',
  'd/dtrtrs.c',
  'd/dsytf2.c',
  'd/dsgesv.c',
  # Symmetric indefinite family
  'd/dlasyf.c',
  'd/dsytrf.c',
  'd/dsytrs.c',
  'd/dsytri.c',
  'd/dsycon.c',
  'd/dsyrfs.c',
  'd/dsysv.c',
  'd/dsysvx.c',
  'd/dsyequb.c',
  'd/dsygs2.c',
  'd/dsygst.c',
  'd/dsygv.c',
  'd/dsygvd.c',
  'd/dsygvx.c',
  # Banded
  'd/dgbsv.c',
  'd/dgbtf2.c',
  'd/dgbtrf.c',
  'd/dgbtrs.c',
  'd/dgbcon.c',
  'd/dgbequ.c',
  'd/dgbequb.c',
  'd/dgbrfs.c',
  'd/dgbsvx.c',
  # Tridiagonal
  'd/dgtsv.c',
  'd/dgttrf.c',
  'd/dgttrs.c',
  'd/dgtts2.c',
  'd/dgtcon.c',
  'd/dgtrfs.c',
  'd/dgtsvx.c',
  # Cholesky factorization family
  'd/disnan.c',
  'd/dlauu2.c',
  'd/dlaqsp.c',
  'd/dlaqsy.c',
  'd/dlauum.c',
  'd/dpotf2.c',
  'd/dpotrf2.c',
  'd/dpotrf.c',
  'd/dpotrs.c',
  'd/dpotri.c',
  'd/dpstf2.c',
  'd/dpstrf.c',
  'd/dpoequ.c',
  'd/dposv.c',
  'd/dpocon.c',
  'd/dporfs.c',
  'd/dposvx.c',
  'd/dsposv.c',
  'd/dlat2s.c',
  # Packed Cholesky (PP)
  'd/dppequ.c',
  'd/dppcon.c',
  'd/dpptrf.c',
  'd/dpptri.c',
  'd/dpptrs.c',
  'd/dpprfs.c',
  'd/dppsv.c',
  'd/dppsvx.c',
  # Packed LDL Symmetric (SP)
  'd/dsptrf.c',
  'd/dsptrs.c',
  'd/dsptri.c',
  'd/dspcon.c',
  'd/dsprfs.c',
  'd/dspsv.c',
  'd/dspsvx.c',
  # Packed Symmetric Eigenvalue (SP)
  'd/dsptrd.c',
  'd/dspgst.c',
  'd/dopgtr.c',
  'd/dopmtr.c',
  'd/dspev.c',
  'd/dspevd.c',
  'd/dspevx.c',
  'd/dspgv.c',
  'd/dspgvd.c',
  'd/dspgvx.c',
  # Packed Triangular (TP)
  'd/dtptri.c',
  'd/dtpcon.c',
  'd/dtptrs.c',
  'd/dtprfs.c',
  # Positive Definite Banded (PB)
  'd/dlansb.c',
  'd/dlaqsb.c',
  'd/dpbtf2.c',
  'd/dpbtrf.c',
  'd/dpbtrs.c',
  'd/dpbequ.c',
  'd/dpbcon.c',
  'd/dpbrfs.c',
  'd/dpbsv.c',
  'd/dpbsvx.c',
  'd/dpbstf.c',
  # Symmetric Banded (SB)
  'd/dlar2v.c',
  'd/dsbtrd.c',
  'd/dsbev.c',
  'd/dsbevd.c',
  'd/dsbevx.c',
  'd/dsbev_2stage.c',
  'd/dsbevd_2stage.c',
  'd/dsbevx_2stage.c',
  'd/dsbgst.c',
  'd/dsbgv.c',
  'd/dsbgvd.c',
  'd/dsbgvx.c',
  # Triangular Banded (TB)
  'd/dtbtrs.c',
  'd/dtbcon.c',
  'd/dtbrfs.c',
  # Positive definite tridiagonal
  'd/dpttrf.c',
  'd/dptts2.c',
  'd/dpttrs.c',
  'd/dptcon.c',
  'd/dptrfs.c',
  'd/dptsv.c',
  'd/dptsvx.c',
  'd/dpteqr.c',
  'd/dstegr.c',
  # QR/LQ/QL/RQ factorization family
  'd/dgeqr2.c',
  'd/dgeqrf.c',
  'd/dgelq2.c',
  'd/dgelqf.c',
  'd/dgeql2.c',
  'd/dgeqlf.c',
  'd/dgerq2.c',
  'd/dgerqf.c',
  # Q generation
  'd/dorg2r.c',
  'd/dorgqr.c',
  'd/dorgl2.c',
  'd/dorglq.c',
  'd/dorg2l.c',
  'd/dorgql.c',
  'd/dorgr2.c',
  'd/dorgrq.c',
  # Q application
  'd/dorm2r.c',
  'd/dorm22.c',
  'd/dormqr.c',
  'd/dorml2.c',
  'd/dormlq.c',
  'd/dorm2l.c',
  'd/dormql.c',
  'd/dormr2.c',
  'd/dormrq.c',
  # QR with positive diagonal
  'd/dgeqr2p.c',
  'd/dgeqrfp.c',
  # QR with column pivoting
  'd/dlaqp2.c',
  'd/dlaqps.c',
  'd/dgeqp3.c',
  # Compact WY QR
  'd/dgeqrt2.c',
  'd/dgeqrt3.c',
  'd/dgeqrt.c',
  'd/dgemqrt.c',
  # Compact WY LQ
  'd/dgelqt3.c',
  'd/dgelqt.c',
  'd/dgemlqt.c',
  # Tall-Skinny QR/LQ
  'd/dlatsqr.c',
  'd/dlamtsqr.c',
  'd/dgeqr.c',
  'd/dgemqr.c',
  'd/dlaswlq.c',
  'd/dlamswlq.c',
  'd/dgelq.c',
  'd/dgemlq.c',
  # RZ factorization chain
  'd/dtzrzf.c',
  'd/dormr3.c',
  'd/dormrz.c',
  # Least squares drivers
  'd/dgels.c',
  'd/dgelsy.c',
  'd/dgelss.c',
  'd/dgelsd.c',
  # Least squares auxiliaries (for dgelsd)
  'd/dlalsd.c',
  'd/dlalsa.c',
  'd/dlals0.c',
  # Triangular condition/refinement
  'd/dtrcon.c',
  'd/dtrrfs.c',
  # Symmetric tridiagonal reduction
  'd/dsytrd.c',
  'd/dsytd2.c',
  'd/dlatrd.c',
  'd/dlarfy.c',
  'd/dorgtr.c',
  'd/dormtr.c',
  # Symmetric eigenvalue drivers
  'd/dsyev.c',
  'd/dsyevd.c',
  'd/dsyevr.c',
  'd/dsyevx.c',
  # Eigenvalue auxiliaries
  'd/dlae2.c',
  'd/dlaev2.c',
  'd/dlanst.c',
  'd/dlasrt.c',
  'd/dlartg.c',
  'd/dlasr.c',
  # Divide-and-conquer eigenvalue helpers
  'd/dlaed5.c',
  'd/dlaed6.c',
  # RRR (Relatively Robust Representation) helpers
  'd/dlarrc.c',
  'd/dlarrk.c',
  'd/dlarra.c',
  'd/dlarrf.c',
  'd/dlar1v.c',
  # Random number generation
  'd/dlaruv.c',
  'd/dlarnv.c',
  # dqds eigenvalue algorithm
  'd/dlasq2.c',
  'd/dlasq3.c',
  'd/dlasq4.c',
  'd/dlasq5.c',
  'd/dlasq6.c',
  # Tridiagonal eigenvalue LU (inverse iteration)
  'd/dlagtf.c',
  'd/dlagts.c',
  # Tridiagonal eigenvalue algorithms
  'd/dsterf.c',
  'd/dsteqr.c',
  'd/dlaebz.c',
  'd/dstebz.c',
  'd/dstein.c',
  # RRR (Relatively Robust Representation) helpers (additional)
  'd/dlaneg.c',
  'd/dlarrr.c',
  'd/dlarrb.c',
  'd/dlarrd.c',
  'd/dlarre.c',
  'd/dlarrj.c',
  'd/dlarrv.c',
  # Tridiagonal eigenvalue drivers
  'd/dstemr.c',
  'd/dstev.c',
  'd/dstevd.c',
  'd/dstevx.c',
  'd/dstevr.c',
  # Divide-and-conquer eigenvalue helpers (continued)
  'd/dlaed0.c',
  'd/dlaed1.c',
  'd/dlaed2.c',
  'd/dlaed3.c',
  'd/dlaed4.c',
  'd/dlaed7.c',
  'd/dlaed8.c',
  'd/dlaed9.c',
  'd/dlaeda.c',
  'd/dlamrg.c',
  'd/dstedc.c',
  # Non-symmetric eigenvalue foundation
  'd/dladiv2.c',
  'd/dladiv1.c',
  'd/dladiv.c',
  'd/dlanv2.c',
  # Non-symmetric eigenvalue Schur reordering
  'd/dlasy2.c',
  'd/dlaexc.c',
  'd/dtrexc.c',
  # Non-symmetric eigenvalue Hessenberg reduction
  'd/dgehd2.c',
  'd/dlahr2.c',
  'd/dgehrd.c',
  'd/dorghr.c',
  # Non-symmetric eigenvalue balancing
  'd/dgebal.c',
  'd/dgebak.c',
  # Non-symmetric eigenvalue eigenvectors
  'd/dlaln2.c',
  'd/dtrevc.c',
  'd/dtrevc3.c',
  # Non-symmetric eigenvalue Q application
  'd/dormhr.c',
  # Non-symmetric eigenvalue QR algorithm
  'd/dlaqr1.c',
  'd/dlahqr.c',
  'd/dlaqr5.c',
  'd/dlaqr2.c',
  'd/dlaqr4.c',
  'd/dlaqr3.c',
  'd/dlaqr0.c',
  'd/dhseqr.c',
  # Non-symmetric eigenvalue eigenvectors (inverse iteration)
  'd/dlaein.c',
  'd/dhsein.c',
  # Non-symmetric eigenvalue Sylvester and Schur reordering
  'd/dtrsyl.c',
  'd/dtrsyl3.c',
  'd/dtrsen.c',
  # Non-symmetric eigenvalue condition numbers
  'd/dlaqtr.c',
  'd/dtrsna.c',
  # Non-symmetric eigenvalue drivers
  'd/dgeev.c',
  'd/dgees.c',
  'd/dgeevx.c',
  'd/dgeesx.c',
  # SVD Phase 1: Foundation routines
  'd/dlas2.c',
  'd/dlasv2.c',
  'd/dlabrd.c',
  'd/dlasq1.c',
  # HSEQR parameters
  'd/iparmq.c',
  # SVD Phase 2: Bidiagonal reduction
  'd/dgebd2.c',
  'd/dgebrd.c',
  'd/dorgbr.c',
  'd/dormbr.c',
  # SVD Phase 3: Bidiagonal QR iteration
  'd/dbdsqr.c',
  # SVD Phase 4: Main SVD driver
  'd/dgesvd.c',
  # SVD Phase 5: Divide-and-Conquer chain
  'd/dlasdt.c',
  'd/dlasd5.c',
  'd/dlasd4.c',
  'd/dlasd8.c',
  'd/dlasd2.c',
  'd/dlasd3.c',
  'd/dlasd1.c',
  'd/dlasd7.c',
  'd/dlasd6.c',
  'd/dlasdq.c',
  'd/dlasd0.c',
  'd/dlasda.c',
  'd/dbdsdc.c',
  # SVD Phase 6: Divide-and-Conquer SVD driver
  'd/dgesdd.c',
  # SVD Phase 7: Eigenvalue-Based Path
  'd/dbdsvdx.c',
  'd/dgesvdx.c',
  # SVD Phase 8: Jacobi Methods
  'd/dgsvj0.c',
  'd/dgsvj1.c',
  'd/dgesvj.c',
  # SVD Phase 9: Preconditioned Jacobi SVD
  'd/dgesvdq.c',
  'd/dgejsv.c',
  # SVD Phase 10: Rotation and GSVD utilities
  'd/dlartgp.c',
  'd/dlartgs.c',
  'd/dlapll.c',
  'd/dlags2.c',
  # Generalized SVD (GSVD)
  'd/dtgsja.c',
  'd/dggsvp3.c',
  'd/dggsvd3.c',
  # Band to bidiagonal reduction
  'd/dgbbrd.c',
  # Generalized eigenvalue (GG) foundation
  'd/dggbal.c',
  'd/dggbak.c',
  'd/dgghrd.c',
  'd/dgghd3.c',
  'd/dhgeqz.c',
  'd/dlag2.c',
  'd/dlapy3.c',
  # Generalized eigenvalue (GG) eigenvectors and utilities
  'd/dtgevc.c',
  'd/dlagv2.c',
  'd/dtgsy2.c',
  'd/dtgsyl.c',
  'd/dtgsen.c',
  'd/dtgsna.c',
  'd/dtgex2.c',
  'd/dtgexc.c',
  # Aggressive early deflation QZ (dlaqz family)
  'd/dlaqz0.c',
  'd/dlaqz1.c',
  'd/dlaqz2.c',
  'd/dlaqz3.c',
  'd/dlaqz4.c',
  # Generalized eigenvalue (GG) drivers
  'd/dggev.c',
  'd/dgges.c',
  'd/dggev3.c',
  'd/dgges3.c',
  'd/dggevx.c',
  'd/dggesx.c',
  'd/dggqrf.c',
  'd/dggrqf.c',
  # Triangular-Pentagonal QR/LQ
  'd/dtprfb.c',
  'd/dtpqrt2.c',
  'd/dtplqt2.c',
  'd/dtpqrt.c',
  'd/dtplqt.c',
  'd/dtpmqrt.c',
  'd/dtpmlqt.c',
  # 2-Stage symmetric eigenvalue
  'd/dsb2st_kernels.c',
  'd/dsytrd_sb2st.c',
  'd/dsytrd_sy2sb.c',
  'd/dsytrd_2stage.c',
  'd/dsyev_2stage.c',
  'd/dsyevd_2stage.c',
  'd/dsyevr_2stage.c',
  'd/dsyevx_2stage.c',
  'd/dsygv_2stage.c',
  # RFP Storage Format
  'd/dlansf.c',
  'd/dtfttp.c',
  'd/dtfttr.c',
  'd/dtpttf.c',
  'd/dtpttr.c',
  'd/dtrttf.c',
  'd/dtrttp.c',
  'd/dtfsm.c',
  'd/dsfrk.c',
  'd/dtftri.c',
  'd/dpftrf.c',
  'd/dpftrs.c',
  'd/dpftri.c',
  # LDL Rook Pivoting (v2)
  'd/dlasyf_rook.c',
  'd/dsycon_rook.c',
  'd/dsytf2_rook.c',
  'd/dsytrf_rook.c',
  'd/dsytri_rook.c',
  'd/dsytrs_rook.c',
  # LDL Rook Pivoting (v3 - RK format)
  'd/dsyswapr.c',
  'd/dlasyf_rk.c',
  'd/dsytf2_rk.c',
  'd/dsytrs_3.c',
  'd/dsytrf_rk.c',
  'd/dsytri_3x.c',
  'd/dsytri_3.c',
  'd/dsycon_3.c',
  'd/dsyconv.c',
  'd/dsyconvf.c',
  'd/dsytri2.c',
  'd/dsytri2x.c',
  'd/dsytrs2.c',
  'd/dsyconvf_rook.c',
  'd/dsysv_rk.c',
  # LDL Aasen Method
  'd/dlasyf_aa.c',
  'd/dsytrs_aa.c',
  'd/dsytrf_aa.c',
  'd/dsysv_aa.c',
  'd/dsytrf_aa_2stage.c',
  'd/dsytrs_aa_2stage.c',
  'd/dsysv_aa_2stage.c',
  # Tall-Skinny QR/LQ
  'd/dlaorhr_col_getrfnp2.c',
  'd/dlaorhr_col_getrfnp.c',
  'd/dlarfb_gett.c',
  'd/dorhr_col.c',
  'd/dorgtsqr.c',
  'd/dorgtsqr_row.c',
  'd/dgetsqrhrt.c',
  # QR Rank-k Pivoting
  'd/dlaqp2rk.c',
  'd/dlaqp3rk.c',
  'd/dgeqp3rk.c',
  'd/dgelst.c',
  # CS Decomposition
  'd/dlapmr.c',
  'd/dorbdb1.c',
  'd/dorbdb2.c',
  'd/dorbdb3.c',
  'd/dorbdb4.c',
  'd/dorbdb5.c',
  'd/dorbdb6.c',
  'd/dorbdb.c',
  'd/dbbcsd.c',
  'd/dorcsd2by1.c',
  'd/dorcsd.c',
  'd/dgetsls.c',
  # Constrained Least Squares
  'd/dgglse.c',
  'd/dggglm.c',
  # Miscellaneous Computational
  'd/dpoequb.c',
  'd/ddisna.c',
  'd/dlacon.c',
  'd/dsysv_rook.c',
  # Auxiliary/Utility
  'd/dlaisnan.c',
  'd/dlabad.c',
  'd/iladlc.c',
  'd/iladlr.c',
)

# Single precision routines
s_sources = files(
  's/ilaslc.c',
  's/ilaslr.c',
  's/sbbcsd.c',
  's/sbdsdc.c',
  's/sbdsqr.c',
  's/sbdsvdx.c',
  's/sdisna.c',
  's/sgbbrd.c',
  's/sgbcon.c',
  's/sgbequ.c',
  's/sgbequb.c',
  's/sgbrfs.c',
  's/sgbsv.c',
  's/sgbsvx.c',
  's/sgbtf2.c',
  's/sgbtrf.c',
  's/sgbtrs.c',
  's/sgebak.c',
  's/sgebal.c',
  's/sgebd2.c',
  's/sgebrd.c',
  's/sgecon.c',
  's/sgeequ.c',
  's/sgeequb.c',
  's/sgees.c',
  's/sgeesx.c',
  's/sgeev.c',
  's/sgeevx.c',
  's/sgehd2.c',
  's/sgehrd.c',
  's/sgejsv.c',
  's/sgelq.c',
  's/sgelq2.c',
  's/sgelqf.c',
  's/sgelqt.c',
  's/sgelqt3.c',
  's/sgels.c',
  's/sgelsd.c',
  's/sgelss.c',
  's/sgelst.c',
  's/sgelsy.c',
  's/sgemlq.c',
  's/sgemlqt.c',
  's/sgemqr.c',
  's/sgemqrt.c',
  's/sgeql2.c',
  's/sgeqlf.c',
  's/sgeqp3.c',
  's/sgeqp3rk.c',
  's/sgeqr.c',
  's/sgeqr2.c',
  's/sgeqr2p.c',
  's/sgeqrf.c',
  's/sgeqrfp.c',
  's/sgeqrt.c',
  's/sgeqrt2.c',
  's/sgeqrt3.c',
  's/sgerfs.c',
  's/sgerq2.c',
  's/sgerqf.c',
  's/sgesc2.c',
  's/sgesdd.c',
  's/sgesv.c',
  's/sgesvd.c',
  's/sgesvdq.c',
  's/sgesvdx.c',
  's/sgesvj.c',
  's/sgesvx.c',
  's/sgetc2.c',
  's/sgetf2.c',
  's/sgetrf.c',
  's/sgetrf2.c',
  's/sgetri.c',
  's/sgetrs.c',
  's/sgetsls.c',
  's/sgetsqrhrt.c',
  's/sggbak.c',
  's/sggbal.c',
  's/sgges.c',
  's/sgges3.c',
  's/sggesx.c',
  's/sggev.c',
  's/sggev3.c',
  's/sggevx.c',
  's/sggglm.c',
  's/sgghd3.c',
  's/sgghrd.c',
  's/sgglse.c',
  's/sggqrf.c',
  's/sggrqf.c',
  's/sggsvd3.c',
  's/sggsvp3.c',
  's/sgsvj0.c',
  's/sgsvj1.c',
  's/sgtcon.c',
  's/sgtrfs.c',
  's/sgtsv.c',
  's/sgtsvx.c',
  's/sgttrf.c',
  's/sgttrs.c',
  's/sgtts2.c',
  's/shgeqz.c',
  's/shsein.c',
  's/shseqr.c',
  's/sisnan.c',
  's/slabad.c',
  's/slabrd.c',
  's/slacn2.c',
  's/slacon.c',
  's/slacpy.c',
  's/sladiv.c',
  's/sladiv1.c',
  's/sladiv2.c',
  's/slae2.c',
  's/slaebz.c',
  's/slaed0.c',
  's/slaed1.c',
  's/slaed2.c',
  's/slaed3.c',
  's/slaed4.c',
  's/slaed5.c',
  's/slaed6.c',
  's/slaed7.c',
  's/slaed8.c',
  's/slaed9.c',
  's/slaeda.c',
  's/slaein.c',
  's/slaev2.c',
  's/slaexc.c',
  's/slag2.c',
  's/slag2d.c',
  's/slags2.c',
  's/slagtf.c',
  's/slagtm.c',
  's/slagts.c',
  's/slagv2.c',
  's/slahqr.c',
  's/slahr2.c',
  's/slaic1.c',
  's/slaisnan.c',
  's/slaln2.c',
  's/slals0.c',
  's/slalsa.c',
  's/slalsd.c',
  's/slamch.c',
  's/slamrg.c',
  's/slamswlq.c',
  's/slamtsqr.c',
  's/slaneg.c',
  's/slangb.c',
  's/slange.c',
  's/slangt.c',
  's/slanhs.c',
  's/slansb.c',
  's/slansf.c',
  's/slansp.c',
  's/slanst.c',
  's/slansy.c',
  's/slantb.c',
  's/slantp.c',
  's/slantr.c',
  's/slanv2.c',
  's/slaorhr_col_getrfnp.c',
  's/slaorhr_col_getrfnp2.c',
  's/slapll.c',
  's/slapmr.c',
  's/slapmt.c',
  's/slapy2.c',
  's/slapy3.c',
  's/slaqgb.c',
  's/slaqge.c',
  's/slaqp2.c',
  's/slaqp2rk.c',
  's/slaqp3rk.c',
  's/slaqps.c',
  's/slaqr0.c',
  's/slaqr1.c',
  's/slaqr2.c',
  's/slaqr3.c',
  's/slaqr4.c',
  's/slaqr5.c',
  's/slaqsb.c',
  's/slaqsp.c',
  's/slaqsy.c',
  's/slaqtr.c',
  's/slaqz0.c',
  's/slaqz1.c',
  's/slaqz2.c',
  's/slaqz3.c',
  's/slaqz4.c',
  's/slar1v.c',
  's/slar2v.c',
  's/slarf.c',
  's/slarf1f.c',
  's/slarf1l.c',
  's/slarfb.c',
  's/slarfb_gett.c',
  's/slarfg.c',
  's/slarfgp.c',
  's/slarft.c',
  's/slarfx.c',
  's/slarfy.c',
  's/slargv.c',
  's/slarmm.c',
  's/slarnv.c',
  's/slarra.c',
  's/slarrb.c',
  's/slarrc.c',
  's/slarrd.c',
  's/slarre.c',
  's/slarrf.c',
  's/slarrj.c',
  's/slarrk.c',
  's/slarrr.c',
  's/slarrv.c',
  's/slartg.c',
  's/slartgp.c',
  's/slartgs.c',
  's/slartv.c',
  's/slaruv.c',
  's/slarz.c',
  's/slarzb.c',
  's/slarzt.c',
  's/slas2.c',
  's/slascl.c',
  's/slasd0.c',
  's/slasd1.c',
  's/slasd2.c',
  's/slasd3.c',
  's/slasd4.c',
  's/slasd5.c',
  's/slasd6.c',
  's/slasd7.c',
  's/slasd8.c',
  's/slasda.c',
  's/slasdq.c',
  's/slasdt.c',
  's/slaset.c',
  's/slasq1.c',
  's/slasq2.c',
  's/slasq3.c',
  's/slasq4.c',
  's/slasq5.c',
  's/slasq6.c',
  's/slasr.c',
  's/slasrt.c',
  's/slassq.c',
  's/slasv2.c',
  's/slaswlq.c',
  's/slaswp.c',
  's/slasy2.c',
  's/slasyf.c',
  's/slasyf_aa.c',
  's/slasyf_rk.c',
  's/slasyf_rook.c',
  's/slatbs.c',
  's/slatdf.c',
  's/slatps.c',
  's/slatrd.c',
  's/slatrs.c',
  's/slatrs3.c',
  's/slatrz.c',
  's/slatsqr.c',
  's/slauu2.c',
  's/slauum.c',
  's/sopgtr.c',
  's/sopmtr.c',
  's/sorbdb.c',
  's/sorbdb1.c',
  's/sorbdb2.c',
  's/sorbdb3.c',
  's/sorbdb4.c',
  's/sorbdb5.c',
  's/sorbdb6.c',
  's/sorcsd.c',
  's/sorcsd2by1.c',
  's/sorg2l.c',
  's/sorg2r.c',
  's/sorgbr.c',
  's/sorghr.c',
  's/sorgl2.c',
  's/sorglq.c',
  's/sorgql.c',
  's/sorgqr.c',
  's/sorgr2.c',
  's/sorgrq.c',
  's/sorgtr.c',
  's/sorgtsqr.c',
  's/sorgtsqr_row.c',
  's/sorhr_col.c',
  's/sorm22.c',
  's/sorm2l.c',
  's/sorm2r.c',
  's/sormbr.c',
  's/sormhr.c',
  's/sorml2.c',
  's/sormlq.c',
  's/sormql.c',
  's/sormqr.c',
  's/sormr2.c',
  's/sormr3.c',
  's/sormrq.c',
  's/sormrz.c',
  's/sormtr.c',
  's/spbcon.c',
  's/spbequ.c',
  's/spbrfs.c',
  's/spbstf.c',
  's/spbsv.c',
  's/spbsvx.c',
  's/spbtf2.c',
  's/spbtrf.c',
  's/spbtrs.c',
  's/spftrf.c',
  's/spftri.c',
  's/spftrs.c',
  's/spocon.c',
  's/spoequ.c',
  's/spoequb.c',
  's/sporfs.c',
  's/sposv.c',
  's/sposvx.c',
  's/spotf2.c',
  's/spotrf.c',
  's/spotrf2.c',
  's/spotri.c',
  's/spotrs.c',
  's/sppcon.c',
  's/sppequ.c',
  's/spprfs.c',
  's/sppsv.c',
  's/sppsvx.c',
  's/spptrf.c',
  's/spptri.c',
  's/spptrs.c',
  's/spstf2.c',
  's/spstrf.c',
  's/sptcon.c',
  's/spteqr.c',
  's/sptrfs.c',
  's/sptsv.c',
  's/sptsvx.c',
  's/spttrf.c',
  's/spttrs.c',
  's/sptts2.c',
  's/srscl.c',
  's/ssb2st_kernels.c',
  's/ssbev.c',
  's/ssbev_2stage.c',
  's/ssbevd.c',
  's/ssbevd_2stage.c',
  's/ssbevx.c',
  's/ssbevx_2stage.c',
  's/ssbgst.c',
  's/ssbgv.c',
  's/ssbgvd.c',
  's/ssbgvx.c',
  's/ssbtrd.c',
  's/ssfrk.c',
  's/sspcon.c',
  's/sspev.c',
  's/sspevd.c',
  's/sspevx.c',
  's/sspgst.c',
  's/sspgv.c',
  's/sspgvd.c',
  's/sspgvx.c',
  's/ssprfs.c',
  's/sspsv.c',
  's/sspsvx.c',
  's/ssptrd.c',
  's/ssptrf.c',
  's/ssptri.c',
  's/ssptrs.c',
  's/sstebz.c',
  's/sstedc.c',
  's/sstegr.c',
  's/sstein.c',
  's/sstemr.c',
  's/ssteqr.c',
  's/ssterf.c',
  's/sstev.c',
  's/sstevd.c',
  's/sstevr.c',
  's/sstevx.c',
  's/ssycon.c',
  's/ssycon_3.c',
  's/ssycon_rook.c',
  's/ssyconv.c',
  's/ssyconvf.c',
  's/ssyconvf_rook.c',
  's/ssyequb.c',
  's/ssyev.c',
  's/ssyev_2stage.c',
  's/ssyevd.c',
  's/ssyevd_2stage.c',
  's/ssyevr.c',
  's/ssyevr_2stage.c',
  's/ssyevx.c',
  's/ssyevx_2stage.c',
  's/ssygs2.c',
  's/ssygst.c',
  's/ssygv.c',
  's/ssygv_2stage.c',
  's/ssygvd.c',
  's/ssygvx.c',
  's/ssyrfs.c',
  's/ssysv.c',
  's/ssysv_aa.c',
  's/ssysv_aa_2stage.c',
  's/ssysv_rk.c',
  's/ssysv_rook.c',
  's/ssysvx.c',
  's/ssyswapr.c',
  's/ssytd2.c',
  's/ssytf2.c',
  's/ssytf2_rk.c',
  's/ssytf2_rook.c',
  's/ssytrd.c',
  's/ssytrd_2stage.c',
  's/ssytrd_sb2st.c',
  's/ssytrd_sy2sb.c',
  's/ssytrf.c',
  's/ssytrf_aa.c',
  's/ssytrf_aa_2stage.c',
  's/ssytrf_rk.c',
  's/ssytrf_rook.c',
  's/ssytri.c',
  's/ssytri2.c',
  's/ssytri2x.c',
  's/ssytri_3.c',
  's/ssytri_3x.c',
  's/ssytri_rook.c',
  's/ssytrs.c',
  's/ssytrs2.c',
  's/ssytrs_3.c',
  's/ssytrs_aa.c',
  's/ssytrs_aa_2stage.c',
  's/ssytrs_rook.c',
  's/stbcon.c',
  's/stbrfs.c',
  's/stbtrs.c',
  's/stfsm.c',
  's/stftri.c',
  's/stfttp.c',
  's/stfttr.c',
  's/stgevc.c',
  's/stgex2.c',
  's/stgexc.c',
  's/stgsen.c',
  's/stgsja.c',
  's/stgsna.c',
  's/stgsy2.c',
  's/stgsyl.c',
  's/stpcon.c',
  's/stplqt.c',
  's/stplqt2.c',
  's/stpmlqt.c',
  's/stpmqrt.c',
  's/stpqrt.c',
  's/stpqrt2.c',
  's/stprfb.c',
  's/stprfs.c',
  's/stptri.c',
  's/stptrs.c',
  's/stpttf.c',
  's/stpttr.c',
  's/strcon.c',
  's/strevc.c',
  's/strevc3.c',
  's/strexc.c',
  's/strrfs.c',
  's/strsen.c',
  's/strsna.c',
  's/strsyl.c',
  's/strsyl3.c',
  's/strti2.c',
  's/strtri.c',
  's/strtrs.c',
  's/strttf.c',
  's/strttp.c',
  's/stzrzf.c',
)

all_sources = common_sources + auxiliary_sources + d_sources + s_sources

# Build as static library
libsemilapack = static_library('semilapack',
  all_sources,
  include_directories: [inc_pub, inc_src],
  dependencies: [openblas_dep, m_dep],
  install: true,
)

# Declare dependency for use by tests and other subprojects
semilapack_dep = declare_dependency(
  link_with: libsemilapack,
  include_directories: [inc_pub, inc_src],
  dependencies: [openblas_dep, m_dep],
)
